--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_GOOGLE_CLIENT_ID=1009978295589-f94v1q8ic5qn4fdc7mff7qknu3ib6d91.apps.googleusercontent.com
-REACT_APP_API_URL=https://techer-kappa.vercel.app/
+REACT_APP_API_URL=https://1599-105-113-65-153.ngrok-free.app
