--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_GOOGLE_CLIENT_ID=1009978295589-f94v1q8ic5qn4fdc7mff7qknu3ib6d91.apps.googleusercontent.com
 REACT_APP_API_URL=https://1599-105-113-65-153.ngrok-free.app
+REACT_APP_REDIRECT_URI=https://techer.work.gd/api/auth/gmail/callback
